// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PokemonInfoPage > snapshot of pokemonInfoPage 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="pokeball-header-icon"
    >
      <img
        alt="pokeball icon"
        src="/project1/src/assets/img/pb-icon.svg"
      />
      <div
        class="header-link-container"
      >
        <a
          class="link"
          href="/project1/"
        >
          <h1>
            Pokedex
          </h1>
        </a>
      </div>
      <span
        class="switch-container"
      >
        <button
          class="theme-switch "
        >
          Turn Dark
        </button>
      </span>
    </div>
  </header>
  <div
    class="filler-div"
  />
  <div
    class="info-page-container"
  >
    <div
      class="info-pokemon-card"
    >
      <button
        class="favorite-button"
        data-testid="pokemon-details-1"
        type="button"
      >
        <span
          class="favorite-icon-inactive"
          data-testid="test-favorite-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
            />
          </svg>
        </span>
      </button>
      <div
        class="pokemon-name-id"
      >
        <h1>
          Bulbasaur
        </h1>
        <h4
          class="pokemon-text"
        >
          #001
        </h4>
      </div>
      <div
        class="info-pokemon-img"
      >
        <img
          alt="bulbasaur"
          class="info-pokemon-sprite"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
        />
      </div>
      <div
        class="info-pokemon-data"
      >
        <div
          class="info-type-list"
        >
          <span
            class="info-type-badge"
            style="background-color: rgb(122, 199, 76);"
          >
            Grass
          </span>
          <span
            class="info-type-badge"
            style="background-color: rgb(163, 62, 161);"
          >
            Poison
          </span>
        </div>
        <div
          class="pokemon-genus"
        >
          Seed Pokémon
        </div>
      </div>
    </div>
    <div>
      <a
        href="/project1/pokemon/0"
      >
        <button
          class="prev-btn"
          disabled=""
        >
          Prev
        </button>
      </a>
      <a
        href="/project1/pokemon/2"
      >
        <button
          class="next-btn"
        >
          Next
        </button>
      </a>
    </div>
    <div
      class="pokemon-description"
    >
      <h5
        class="pokemon-text info-text"
      >
        Description
      </h5>
      <p>
        Bulbasaur can be seen napping in bright sunlight.
There is a seed on its back. By soaking up the sun’s
rays, the seed grows progressively larger.
      </p>
    </div>
    <div
      class="pokemon-dimensions"
    >
      <div
        class="pokemon-height"
      >
        <h5>
          Height
        </h5>
        <span>
          NaNm
        </span>
      </div>
      <div
        class="pokemon-weight"
      >
        <h5>
          Weight
        </h5>
        <span>
          NaNkg
        </span>
      </div>
    </div>
    <div
      class="pokemon-stats"
    >
      <h5
        class="pokemon-text info-text"
      >
        Stats
      </h5>
      <div
        class="parameter-container"
      >
        <div
          class="parameter-section"
        >
          <h5
            class="info-text"
          >
            hp
          </h5>
          <div
            class="statbar-container"
          >
            <div
              class="statbar-segment"
              style="background-color: rgb(255, 1, 0); width: 17.647058823529413%;"
            >
              <span>
                45
              </span>
            </div>
          </div>
        </div>
        <div
          class="parameter-section"
        >
          <h5
            class="info-text"
          >
            attack
          </h5>
          <div
            class="statbar-container"
          >
            <div
              class="statbar-segment"
              style="background-color: rgb(240, 128, 48); width: 19.215686274509807%;"
            >
              <span>
                49
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Snapshot PokemonInfoPage > snapshot of pokemonInfoPage 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="pokeball-header-icon"
    >
      <img
        alt="pokeball icon"
        src="/project1/src/assets/img/pb-icon.svg"
      />
      <div
        class="header-link-container"
      >
        <a
          class="link"
          href="/project1"
        >
          <h1>
            Pokedex
          </h1>
        </a>
      </div>
      <span
        class="switch-container"
      >
        <button
          class="theme-switch "
        >
          Turn Dark
        </button>
      </span>
    </div>
  </header>
  <div
    class="filler-div"
  />
  <div
    class="info-page-container"
  >
    <div
      class="info-pokemon-card"
    >
      <button
        class="favorite-button"
        type="button"
      >
        <svg
          class="favorite-icon-inactive"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
          />
        </svg>
      </button>
      <div
        class="pokemon-name-id"
      >
        <h1>
          Bulbasaur
        </h1>
        <h4
          class="pokemon-text"
        >
          #001
        </h4>
      </div>
      <div
        class="info-pokemon-img"
      >
        <img
          alt="bulbasaur"
          class="info-pokemon-sprite"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
        />
      </div>
      <div
        class="info-pokemon-data"
      >
        <div
          class="info-type-list"
        >
          <span
            class="info-type-badge"
            style="background-color: rgb(122, 199, 76);"
          >
            Grass
          </span>
          <span
            class="info-type-badge"
            style="background-color: rgb(163, 62, 161);"
          >
            Poison
          </span>
        </div>
        <div
          class="pokemon-genus"
        >
          Seed Pokémon
        </div>
      </div>
    </div>
    <div>
      <a
        href="/project1/pokemon/0"
      >
        <button
          class="prev-btn"
          disabled=""
        >
          Prev
        </button>
      </a>
      <a
        href="/project1/pokemon/2"
      >
        <button
          class="next-btn"
        >
          Next
        </button>
      </a>
    </div>
    <div
      class="pokemon-description"
    >
      <h5
        class="pokemon-text info-text"
      >
        Description
      </h5>
      <p>
        Bulbasaur can be seen napping in bright sunlight.
There is a seed on its back. By soaking up the sun’s
rays, the seed grows progressively larger.
      </p>
    </div>
    <div
      class="pokemon-dimensions"
    >
      <div
        class="pokemon-height"
      >
        <h5>
          Height
        </h5>
        <span>
          NaNm
        </span>
      </div>
      <div
        class="pokemon-weight"
      >
        <h5>
          Weight
        </h5>
        <span>
          NaNkg
        </span>
      </div>
    </div>
    <div
      class="pokemon-stats"
    >
      <h5
        class="pokemon-text info-text"
      >
        Stats
      </h5>
      <div
        class="parameter-container"
      >
        <div
          class="parameter-section"
        >
          <h5
            class="info-text"
          >
            hp
          </h5>
          <div
            class="statbar-container"
          >
            <div
              class="statbar-segment"
              style="background-color: rgb(255, 1, 0); width: 17.647058823529413%;"
            >
              <span>
                45
              </span>
            </div>
          </div>
        </div>
        <div
          class="parameter-section"
        >
          <h5
            class="info-text"
          >
            attack
          </h5>
          <div
            class="statbar-container"
          >
            <div
              class="statbar-segment"
              style="background-color: rgb(240, 128, 48); width: 19.215686274509807%;"
            >
              <span>
                49
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
